# DecOR8R

./: .gitignore  DecOR8R.code-workspace  LICENSE  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
decor8r/: handler.py  processor.py  server.py
share/decor8rlib/: pyproject.toml
share/decor8rlib/src/decor8rlib/: __init__.py
source/decor8/: pyproject.toml
source/decor8rctl/: pyproject.toml
source/decor8rd/: handler.py  pyproject.toml  server.py
